crates/apollo-compiler/test_data/diagnostics/0111_const_value.txt
Error: syntax error: unexpected variable value in a Const context
   ╭─[ 0111_const_value.graphql:3:23 ]
   │
 3 │     $var2: Boolean! = $var1
   │                       ┬  
   │                       ╰── unexpected variable value in a Const context
───╯
Error: variable `$var1` is not defined
   ╭─[ 0111_const_value.graphql:3:23 ]
   │
 3 │     $var2: Boolean! = $var1
   │                       ──┬──  
   │                         ╰──── not found in this scope
───╯
Error: syntax error: unexpected variable value in a Const context
    ╭─[ 0111_const_value.graphql:11:26 ]
    │
 11 │ type Query @someDir(arg: $var1) {
    │                          ┬  
    │                          ╰── unexpected variable value in a Const context
────╯
Error: variable `$var1` is not defined
    ╭─[ 0111_const_value.graphql:11:26 ]
    │
 11 │ type Query @someDir(arg: $var1) {
    │                          ──┬──  
    │                            ╰──── not found in this scope
────╯

